--- a/kafka-jaas.conf
+++ b/kafka-jaas.conf
@@ -9,6 +9,6 @@ KafkaServer {
 
 Client {
     org.apache.kafka.common.security.plain.PlainLoginModule required
-    username="kafka_admin"
-    password="kafka_admin_password_123";
+    username=""
+    password="";
 };
