--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ __pycache__/
 *$py.class
 *.so
 .Python
+data/
 env/
 venv/
 ENV/
@@ -29,6 +30,9 @@ wheels/
 secrets.env
 .venv
 
+# Kafka configuration with passwords
+kafka-jaas.conf
+
 # IDE
 .vscode/
 .idea/
@@ -38,6 +42,10 @@ secrets.env
 
 # Docker
 *.log
+
+# Processing state
+processing_state.json
+*.csv.tmp
 
 # OS
 .DS_Store
