cp1251 requests considered

--- a/parser_config.json
+++ b/parser_config.json
@@ -1,11 +1,11 @@
 {
   "csv_columns": {
-    "timestamp": "1711958929",
-    "user_id": "0",
-    "event_data": "{\"agent_id\":\"91730b22-bcb0-48b4-a566-d53f777d5d56\",\"character_type\":\"OWN\",\"system_prompt\":\"Девушка 24 года, черные кудрявые волосы. Общительная\"}",
-    "event_type": "gigaback_agent_created"
+    "timestamp": 28,
+    "user_id": 29,
+    "event_data": 13,
+    "event_type": 14
   },
-  "description": "Column names from CSV file. First row contains column headers. Map to actual CSV column names.",
+  "description": "Column indices (0-based) for CSV file. CSV file does not contain column headers, so use numeric indices to access columns.",
   "event_type_filter": [
     "gigaback_request_generated",
     "gigaback_request_created"
