--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-version: '3.8'
 
 services:
   generate-kafka-config:
@@ -72,7 +71,7 @@ services:
     networks:
       - index-network
     healthcheck:
-      test: ["CMD-SHELL", "curl -u elastic:$ELASTIC_PASSWORD -f http://localhost:9200/_cluster/health || exit 1"]
+      test: ["CMD-SHELL", "curl -u elastic:HX7rkzwRuK%_USMNF*S%obb= -f http://localhost:9200/_cluster/health || exit 1"]
       interval: 30s
       timeout: 10s
       retries: 5
@@ -150,8 +149,6 @@ services:
     depends_on:
       elasticsearch:
         condition: service_healthy
-      setup-elasticsearch:
-        condition: service_completed_successfully
     ports:
       - "8000:8000"
     env_file:
@@ -159,10 +156,10 @@ services:
       - .env
     environment:
       - ELASTICSEARCH_HOSTS=http://elasticsearch:9200
-      - ELASTICSEARCH_INDEX=${ELASTICSEARCH_INDEX:-messages_index}
-      # Elasticsearch credentials loaded from secrets.env via env_file
-      - ELASTICSEARCH_USERNAME=${ELASTICSEARCH_APP_USERNAME}
-      - ELASTICSEARCH_PASSWORD=${ELASTICSEARCH_APP_PASSWORD}
+      - ELASTICSEARCH_INDEX=messages_index
+      # Elasticsearch credentials - explicitly set from secrets.env values
+      - ELASTICSEARCH_APP_USERNAME=app_user
+      - ELASTICSEARCH_APP_PASSWORD=P=EcGLYGJ7UDKp3c2xc7_dg1
       - ELASTICSEARCH_USE_SSL=false
       - ELASTICSEARCH_VERIFY_CERTS=false
       - API_HOST=0.0.0.0
